--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ a {
   width: 150px;
   height: 0;
   background: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
   border-radius: 10px;
   overflow: hidden;
@@ -147,7 +148,7 @@ a {
   align-items: center;
   background: 
     linear-gradient( transparent, rgba(20, 20, 20, 1)),
-    url(assets/images/Fondo-Hero-2.svg);
+    url("./assets/images/Fondo-Hero-2.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
