--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ a {
   align-items: center;
   background: 
     linear-gradient( transparent, rgba(20, 20, 20, 1)),
-    url("./assets/images/Fondo-Hero-2.svg");
+    url("../JuaneCabreraWeb.github.io/assets/images/fondo-hero-2.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
